# gozer

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  libgozerconsensus.pc.in  to-do.txt
.github/: ISSUE_TEMPLATE.md
.tx/: config
build-aux/m4/: bitcoin_qt.m4
contrib/: README.md  gitian-build.sh  gozer-cli.bash-completion  gozer-qt.pro  gozer-tx.bash-completion  gozerd.bash-completion  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  gozer-qt.desktop  gozer-qt.install  gozer-qt.lintian-overrides  gozer-qt.manpages  gozer-qt.protocol  gozer-tx.bash-completion  gozer-tx.install  gozer-tx.manpages  gozerd.bash-completion  gozerd.examples  gozerd.install  gozerd.lintian-overrides  gozerd.manpages  rules  watch
contrib/devtools/: README.md  gen-manpages.sh  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-rpi2.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  gozerd.conf  gozerd.init  gozerd.openrc  gozerd.openrcconf  gozerd.service.app  org.gozer.gozerd.plist
contrib/linearize/: README.md  example-linearize-testnet.cfg  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py
contrib/testgen/: README.md
contrib/verify-commits/: pre-push-hook.sh
depends/: README.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: Makefile.am  gozer-cli.1  gozer-qt.1  gozer-tx.1  gozerd.1
docker/: Dockerfile  README.md  build-docker.sh  push-docker.sh
gozer-docs/: protocol-documentation.md
qa/: README.md
qa/pull-tester/: rpc-tests.py
qa/rpc-tests/: fundrawtransaction-hd.py  fundrawtransaction.py  import-rescan.py  listtransactions.py  maxblocksinflight.py  merkle_blocks.py  multi_rpc.py  p2p-acceptblock.py  txn_clone.py  txn_doublespend.py  wallet-dump.py  wallet-hd.py  wallet.py
share/: setup.nsi.in
share/qt/: Info.plist.in  extract_strings_qt.py
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  amount.cpp  base58.h  bip39.h  bip39_english.h  cachemap.h  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  dsnotificationinterface.cpp  flat-database.h  governance-classes.cpp  governance-classes.h  governance-exceptions.h  governance-object.cpp  governance-object.h  governance-validators.cpp  governance-validators.h  governance-vote.cpp  governance-vote.h  governance-votedb.cpp  governance-votedb.h  governance.cpp  governance.h  gozer-cli-res.rc  gozer-cli.cpp  (+57 more)
src/bench/: .gitignore  crypto_hash.cpp  string_cast.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h
src/crypto/: common.h
src/policy/: policy.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  darksendconfig.cpp  editaddressdialog.cpp  gozer.cpp  gozer.qrc  gozer_locale.qrc  gozerstrings.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  paymentserver.h  qrdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  (+5 more)
(+152 files in other folders)
